--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,48 @@
-masonite>=3.0,<4.0
-masonite-logging>=1.0,<2.0
-masonite-validation>=3.0,<4.0
+backpack==0.1
+bcrypt==3.1.7
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+cleo==0.8.1
+clikit==0.6.2
+crashtest==0.3.1
+cryptography==2.9
+exceptionite==1.0.1
+Faker==4.18.0
+func-timeout==4.3.5
+gunicorn==20.0.4
+hfilesize==0.1.0
+hupper==1.9.1
+idna==2.10
+inflection==0.3.1
+iso8601==0.1.13
+Jinja2==2.11.2
+m3u8==0.8.0
+MarkupSafe==1.1.1
+masonite==3.0.5
+masonite-dot==0.0.5
+masonite-logging==1.0.1
+masonite-orm==1.0.5
+masonite-qiniu==1.0.1
+masonite-validation==3.0.12
+passlib==1.7.4
+pastel==0.2.1
+pendulum==2.1.2
+pika==1.1.0
+psutil==5.6.7
+pycparser==2.20
+pylev==1.3.0
+PyMySQL==1.0.2
+python-dateutil==2.8.1
+python-dotenv==0.10.5
+pytzdata==2020.1
+qiniu==7.3.1
+requests==2.25.1
+requests-file==1.5.1
+simplejson==3.17.2
+six==1.15.0
+tabulate==0.8.7
+text-unidecode==1.3
+tldextract==2.2.3
+urllib3==1.26.2
+whitenoise==4.1.4
