--- a/.env-example
+++ b/.env-example
@@ -14,6 +14,11 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_LOG=True
 
+QINIU_ACCESS_KEY=
+QINIU_SECRET_KEY=
+QINIU_BUCKET=
+QINIU_DOMAIN=
+
 STORAGE_DRIVER=disk
 
 QUEUE_DRIVER=database
